--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -29,12 +29,12 @@
             <span class="icon-bar"></span>
           </button>
 
-          <a class="navbar-brand" href="#">joe somma</a>
+          <a class="navbar-brand" href="#home">joe somma</a>
         </div>
 
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="#">Home</a></li>
+            <li class="active"><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#contact">Contact</a></li>
@@ -48,7 +48,7 @@
       <div class="row mt-top-row">
         <div class="col-md-6 col-md-offset-3">
           <h1>WELCOME! MY NAME IS JOE</h1>
-          <p class="lead">I AM A SOFTWARE ENGINEER AND A WEB DEVELOPER</p>
+          <p class="lead mt-padding-top">I AM A SOFTWARE ENGINEER AND A WEB DEVELOPER</p>
           <p class="lead">How can I help you with your project?<p>
         </div>
       </div>
@@ -59,7 +59,7 @@
       <div class="row mt-margin-top">
         <div class="col-md-4">
           <div class="thumbnail">
-            <img src="images/project-thumbnail.png" alt="Project 1">
+            <img class="img-circle" src="images/project-thumbnail.png" alt="Project 1">
             <div class="caption">
               <h3>Project 1</h3>
               <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
@@ -69,7 +69,7 @@
         
         <div class="col-md-4">
           <div class="thumbnail">
-            <img src="images/project-thumbnail.png" alt="Project 1">
+            <img class="img-circle" src="images/project-thumbnail.png" alt="Project 1">
             <div class="caption">
               <h3>Project 2</h3>
               <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
@@ -79,7 +79,7 @@
         
         <div class="col-md-4">
           <div class="thumbnail">
-            <img src="images/project-thumbnail.png" alt="Project 1">
+            <img class="img-circle" src="images/project-thumbnail.png" alt="Project 1">
             <div class="caption">
               <h3>Project 3</h3>
               <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
