Removed top-row class from connect page to keep sub heads alligned with other pages

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -193,7 +193,7 @@
       </div> <!-- .row -->
       
       <!-- SOCIAL MEDIA AND CONTACT FORM OUTER ROW -->
-      <div class="row mt-padding-top">
+      <div class="row">
         
         <!-- SOCIAL LINKS COLUMN -->
         <div class="col-md-6 center">
