Added a new style for Nav Next to adjust the margin top to look better on mobile device.  Fixed some spelling errors on the services page

--- a/portfolio/www/index.html
+++ b/portfolio/www/index.html
@@ -82,7 +82,7 @@
       </div> <!-- .row -->
 
       <!-- NAV DOWN - NEXT SECTION -->
-      <div class="row mt-top-row-white">
+      <div class="row mt-nav-next-white">
       
         <div class="col-md-12">      
           <div class="mt-scroll-down-link">
@@ -123,7 +123,7 @@
               <div class="caption mt-service-thumb-text">
                 <span class="fa fa-code fa-5x"></span>
                 <h3>Web Programming</h3>
-                <p>I can help you build your web applicaitons using HTML, CSS, Javascript, Bootstrap, JQuery, PHP, and MySQL technolgies</p>
+                <p>I can help you build your web applications using HTML, CSS, Javascript, Bootstrap, JQuery, PHP, and MySQL technologies</p>
               </div>
             </div>
           </a>   
@@ -147,7 +147,7 @@
               <div class="caption mt-service-thumb-text">
                 <span class="fa fa-puzzle-piece fa-5x"></span>
                 <h3>Development Process</h3>
-                <p>I can help you organize your projects using standard Agile SDLC methodolgies like SCRUM, KANBAN, and LEAN</p>
+                <p>I can help you organize your projects using standard Agile SDLC methodologies like SCRUM, KANBAN, and LEAN</p>
               </div>
             </div>
           </a>
