Portfolio thumbnail shadow and hover styles updates

--- a/portfolio/www/index.html
+++ b/portfolio/www/index.html
@@ -181,7 +181,7 @@
         <div class="col-md-3">
           <div class="thumbnail mt-portfolio-thumb">
             <a href="http://joesomma.me/portfolio/weatherapp/" target="_blank">            
-              <img class="mt-padding-top" src="assets/images/weather-project.png" alt="Weather App">
+              <img src="assets/images/weather-project.png" alt="Weather App">
             </a>
             <div class="caption mt-portfolio-thumb-text">
               <h4>Weather Finder</h4>
@@ -192,7 +192,7 @@
         <div class="col-md-3">
           <div class="thumbnail mt-portfolio-thumb">
             <a href="http://joesomma.me/portfolio/journalapp/" target="_blank">
-              <img class="mt-padding-top" src="assets/images/journal-project.png" alt="Journal App">
+              <img src="assets/images/journal-project.png" alt="Journal App">
             </a>
             <div class="caption mt-portfolio-thumb-text">
               <h4>My Journal</h4>
@@ -203,7 +203,7 @@
         <div class="col-md-3">
           <div class="thumbnail mt-portfolio-thumb">
             <a href="http://joesomma.me" target="_blank">
-              <img class="mt-padding-top" src="assets/images/portfolio-project.png" alt="Portfolio App">
+              <img src="assets/images/portfolio-project.png" alt="Portfolio App">
             </a>
             <div class="caption mt-portfolio-thumb-text">
               <h4>My Portfolio</h4>
@@ -214,7 +214,7 @@
         <div class="col-md-3">
           <div class="thumbnail mt-portfolio-thumb">
             <a href="http://www.freecodecamp.com/jsommamtek" target="_blank">
-              <img class="mt-padding-top" src="assets/images/freecodecamp-project.png" alt="Free Code Camp">
+              <img src="assets/images/freecodecamp-project.png" alt="Free Code Camp">
             </a>  
             <div class="caption mt-portfolio-thumb-text">
               <h4>Free Code Camp</h4>
