Spelling error in services section

--- a/portfolio/www/index.html
+++ b/portfolio/www/index.html
@@ -123,7 +123,7 @@
               <div class="caption mt-service-thumb-text">
                 <span class="fa fa-code fa-5x"></span>
                 <h3>Web Programming</h3>
-                <p>I can help you build your web applications using technologies that inlcude HTML, CSS, Javascript, Bootstrap, JQuery, AngularJS, PHP, and MySQL</p>
+                <p>I can help you build your web applications using technologies that include HTML, CSS, Javascript, Bootstrap, JQuery, AngularJS, PHP, and MySQL</p>
               </div>
             </div>
           </a>   
