Image optimization getting ready to publish to wirenine

--- a/quotemachine/www/index.html
+++ b/quotemachine/www/index.html
@@ -17,7 +17,7 @@
    <!-- link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css"> -->
 
    <!-- FONT-AWESOME CSS REF -->
-   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+   <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"> -->
 
    <!-- APP CSS REF -->
    <link href="css/app.css" rel="stylesheet" type="text/css" />
@@ -31,7 +31,9 @@
 
       <!-- HEADER -->
       <div class="row mt-row">
-         <image src="/img/ring.png" alt="Quote" width="150" height="150"></image>
+         <div class="col-md-4 col-md-offset-4">
+            <image src="/img/ring.png" class="mt-hdr-img" alt="Quote"></image>
+         </div>
       </div>
 
       <div class="row mt-row">
