Optimized images for prod deploy

--- a/quotemachine/www/index.html
+++ b/quotemachine/www/index.html
@@ -32,7 +32,7 @@
       <!-- HEADER -->
       <div class="row mt-row">
          <div class="col-md-4 col-md-offset-4">
-            <image src="/img/ring.png" class="mt-hdr-img" alt="Quote"></image>
+            <image src="img/ring.png" class="mt-hdr-img" alt="Quote"></image>
          </div>
       </div>
 
