--- a/quotemachine/www/index.html
+++ b/quotemachine/www/index.html
@@ -8,6 +8,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+
    <title>Random Quote Machine - Free Code Camp Zipline</title>
 
    <!-- BOOTSTRAP CSS REF -->
@@ -32,7 +33,7 @@
       <!-- HEADER -->
       <div class="row mt-row">
          <div class="col-md-4 col-md-offset-4">
-            <image src="img/ring.png" class="mt-hdr-img" alt="Quote"></image>
+            <img src="img/ring.png" class="mt-hdr-img" alt="Quote"></img>
          </div>
       </div>
 
@@ -56,9 +57,9 @@
       <!-- QUOTE MACHINE CONTENT ROW -->
       <div id="quoteSection" class="row mt-quote-content-row">
 
-         <!-- QUOTE IMAGE COL -->
+         <!-- QUOTE IMg COL -->
          <div class="col-md-6 mt-img-col">
-            <img src="" id="quoteImg" class="img-responsive img-rounded" alt="Charactor Image Goes Here!">
+            <img src="" id="quoteImg" class="img-responsive img-rounded" alt="Charactor Img Goes Here!">
          </div>
 
          <!-- QUOTE TEXT COL -->
