Updated tag line and sub heading text

--- a/portfolio/www/index.html
+++ b/portfolio/www/index.html
@@ -76,7 +76,7 @@
       <!-- SUB HEADING AND TAG LINE -->
       <div class="row mt-sub-head-white text-center">
         <div class="col-md-6 col-md-offset-3">
-          <p class="lead">I am passionate about software development and I love the excitement of a client when they see their business come to life through software</p>
+          <p class="lead">I am a trustworthy, resourceful, and reliable software engineer who builds custom web applications and technology solutions for start-up businesses, entrepreneurs, and multinational corporations</p>
         </div>
 
       </div> <!-- .row -->
@@ -188,7 +188,7 @@
             </div>
           </div>
         </div>
-        
+
         <div class="col-md-3">
           <div class="thumbnail mt-portfolio-thumb">
             <a href="http://joesomma.me/portfolio/weatherapp/" target="_blank">
