Add new Site Ranking app to portfolio section

--- a/portfolio/www/index.html
+++ b/portfolio/www/index.html
@@ -180,8 +180,19 @@
 
         <div class="col-md-3 ">
           <div class="thumbnail mt-portfolio-thumb ">
-            <a href="http://joesomma.me/portfolio/quotemachineapp/ " target="_blank ">
-              <img src="assets/images/quotemachine-project.png " alt="Quote Machine App ">
+            <a href="http://somma-project.meteor.com" target="_blank ">
+              <img src="assets/images/site-ranking-project.png" alt="Site Ranking App">
+            </a>
+            <div class="caption mt-portfolio-thumb-text ">
+              <h4>Site Ranking App</h4>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-3 ">
+          <div class="thumbnail mt-portfolio-thumb ">
+            <a href="http://joesomma.me/portfolio/quotemachineapp" target="_blank ">
+              <img src="assets/images/quotemachine-project.png" alt="Quote Machine App">
             </a>
             <div class="caption mt-portfolio-thumb-text ">
               <h4>LOTR Quote Machine</h4>
@@ -191,7 +202,7 @@
 
         <div class="col-md-3">
           <div class="thumbnail mt-portfolio-thumb">
-            <a href="http://joesomma.me/portfolio/weatherapp/" target="_blank">
+            <a href="http://joesomma.me/portfolio/weatherapp" target="_blank">
               <img src="assets/images/weather-project.png" alt="Weather App">
             </a>
             <div class="caption mt-portfolio-thumb-text">
@@ -202,7 +213,7 @@
 
         <div class="col-md-3">
           <div class="thumbnail mt-portfolio-thumb">
-            <a href="http://joesomma.me/portfolio/journalapp/" target="_blank">
+            <a href="http://joesomma.me/portfolio/journalapp" target="_blank">
               <img src="assets/images/journal-project.png" alt="Journal App">
             </a>
             <div class="caption mt-portfolio-thumb-text">
@@ -284,8 +295,7 @@
 
         </div> <!-- end social links column -->
 
-
-        <! CONTACT FORM COLUMN -->
+        <!-- CONTACT FORM COLUMN -->
 
         <div class="col-md-6 center">
 
