Completed new client profile form

--- a/portfolio/www/index.html
+++ b/portfolio/www/index.html
@@ -165,7 +165,7 @@
     <div id="portfolio" class="container mt-content-container mt-container-portfolio">
 
       <!-- HEADER -->
-      <div class="row mt-top-row-white text-muted"">
+      <div class="row mt-top-row-white text-muted">
 
         <div class="col-md-6 col-md-offset-3">
           <h1>MY PROJECTS</h1>
@@ -335,11 +335,9 @@
 
         </div> <!-- end contact form column -->
 
-      </div> <!-- .row -->
+         <!-- COPYRIGHT FOOTER -->
+         <p class="mt-copyright text-muted">Copyright &copy; Millentek, LLC 2015. All Rights Reserved</p>
 
-      <!-- FOOTER -->
-      <div class="row mt-copyright-row">
-          <p class="mt-copyright text-muted">Copyright &copy; Millentek, LLC 2015. All Rights Reserved</p>
       </div> <!-- .row -->
 
     </div> <!-- .container -->
