--- a/portfolio/www/clientProfile.html
+++ b/portfolio/www/clientProfile.html
@@ -54,80 +54,76 @@
             <div class="row mt-connect-form-row">
 
                <!-- SEND MESSAGE FORM -->
-               <form id="formSaveClientProfile" method="post">
+               <form id="formClientProfile" method="post">
 
                   <!-- COMPANY NAME -->
                   <div id="companyNameGroup" class="form-group">
                      <label for="companyName" class="mt-label text-muted"><span class="mt-label-required">*</span> Company Name</label>
-                     <input id="companyName" name="companyName" value="" type="text" class="form-control" placeholder="e.g. ACME Widgets" required/>
+                     <input id="companyName" name="companyName" value="" type="text" class="form-control" placeholder="e.g. ACME Widgets" />
                   </div>
 
                   <!-- COMPANY ADDRESS -->
                   <div id="companyAddrGroup" class="form-group">
-                     <label for="companyAddr" class="mt-label text-muted"><span class="mt-label-required">*</span> Company Name</label>
-                     <input id="companyAddr" name="companyAddr" value="" type="text" class="form-control" placeholder="e.g. 123 Main St, Gilford, NH 03249" required/>
+                     <label for="companyAddr" class="mt-label text-muted"><span class="mt-label-required">*</span> Company Address</label>
+                     <input id="companyAddr" name="companyAddr" value="" type="text" class="form-control" placeholder="e.g. 123 Main St, Gilford, NH 03249" />
                   </div>
 
                   <!-- CONTACT NAME -->
                   <div id="contactNameGroup" class="form-group">
                      <label for="contactName" class="mt-label text-muted"><span class="mt-label-required">*</span> Contact Full Name</label>
-                     <input id="contactName" name="contactName" value="" type="text" class="form-control" placeholder="e.g. Jordan Spieth" required/>
+                     <input id="contactName" name="contactName" value="" type="text" class="form-control" placeholder="e.g. Jordan Spieth" />
                   </div>
 
-                  <!-- EMAIL -->
-                  <div id="emailGroup" class="form-group">
-                     <label for="email" class="mt-label text-muted"><span class="mt-label-required">*</span> Contact Email</label>
-                     <input id="email" name="email" value="" type="email" class="form-control" placeholder="e.g. jordan@acme.com" required/>
+                  <!-- CONTACT EMAIL -->
+                  <div id="contactEmailGroup" class="form-group">
+                     <label for="contactEmail" class="mt-label text-muted"><span class="mt-label-required">*</span> Contact Email</label>
+                     <input id="contactEmail" name="contactEmail" value="" type="text" class="form-control" placeholder="e.g. jordan@acme.com" />
                   </div>
 
-                  <!-- PHONE -->
-                  <div id="phoneGroup" class="form-group">
-                     <label for="phone" class="mt-label text-muted"><span class="mt-label-required">*</span> Contact Phone</label>
-                     <input id="phone" name="phone" value="" type="tel" class="form-control" placeholder="e.g. 603- 555-1212" required/>
+                  <!-- CONTACT PHONE -->
+                  <div id="contactPhoneGroup" class="form-group">
+                     <label for="contactPhone" class="mt-label text-muted"><span class="mt-label-required">*</span> Contact Phone</label>
+                     <input id="contactPhone" name="contactPhone" value="" type="tel" class="form-control" placeholder="e.g. 603- 555-1212" />
                   </div>
 
                   <!-- COMPANY HISTORY -->
-
                   <div id="coHistoryGroup" class="form-group">
                      <label for="coHistory" class="mt-label text-muted"><span class="mt-label-required">*</span> 1. What is your company history?</label>
-                     <textarea id="coHistory" name="coHistory" class="form-control" rows="5" placeholder="" required></textarea>
+                     <textarea id="coHistory" name="coHistory" class="form-control" rows="5" placeholder="" ></textarea>
                   </div>
-
 
                   <!-- WEBSITE HISTORY -->
                   <div id="webHistoryGroup" class="form-group">
                      <label for="webHistory" class="mt-label text-muted"><span class="mt-label-required">*</span> 2. What is your website history?</label>
-                     <textarea id="webHistory" name="webHistory" class="form-control" rows="5" placeholder="" required></textarea>
+                     <textarea id="webHistory" name="webHistory" class="form-control" rows="5" placeholder="" ></textarea>
                   </div>
-
 
                   <!-- BUILD NOW -->
                   <div id="buildNowGroup" class="form-group">
                      <label for="buildNow" class="mt-label text-muted"><span class="mt-label-required">*</span> 3. What do you want to build now?</label>
-                     <textarea id="buildNow" name="buildNow" class="form-control" rows="5" placeholder="" required></textarea>
+                     <textarea id="buildNow" name="buildNow" class="form-control" rows="5" placeholder="" ></textarea>
                   </div>
 
-
                   <!-- CONSTRAINT -->
-                  <div id="constraintGroup" class="form-group">
+                  <div id="constraintOptionsGroup" class="form-group">
 
-                     <label for="constraint" class="mt-label text-muted"><span class="mt-label-required">*</span> 4. Select the most important variable that you would be willing
+                     <label for="constraintOptions" class="mt-label text-muted"><span class="mt-label-required">*</span> 4. Select the most important variable that you would be willing
                         to define more than any other in order to increase the probability of success for an agile softare
                         development project?</label>
 
                      <div class="radio">
                         <label class="mt-label text-muted">
-                           <input type="radio" name="constraintsOptions" id="constraints1" value="option1"> Time - A fixed deadline
+                           <input type="radio" name="constraintOptions" id="constraintOptions" value="Time" > Time - A fixed deadline
                         </label>
                      </div>
                      <div class="radio">
                         <label class="mt-label text-muted">
-                           <input type="radio" name="constraintsOptions" id="constraints2" value="option2"> Cost - A fixed budget
+                           <input type="radio" name="constraintOptions" id="constraintOptions" value="Cost" > Cost - A fixed budget
                         </label>
                      </div>
                      <div class="radio">
                         <label class="mt-label text-muted">
-                           <input type="radio" name="constraintsOptions" id="constraints3" value="option3"> Scope - A fixed feature set
+                           <input type="radio" name="constraintOptions" id="constraintOptions" value="Scope" > Scope - A fixed feature set
                         </label>
                      </div>
                   </div>
@@ -137,7 +133,7 @@
                      <label for="startDate" class="mt-label text-muted"><span class="mt-label-required">*</span> 5. When would you like to start your project?</label>
 
                      <div class="input-group date" data-date-autoclose="true">
-                        <input id="startDate" name="startDate" value="" type="text" class="form-control" placeholder="e.g. MM/DD/YYYY or Use the Date Picker" required />
+                        <input id="startDate" name="startDate" value="" type="text" class="form-control" placeholder="e.g. MM/DD/YYYY or Use the Date Picker"  />
                         <div class="input-group-addon">
                            <span class="glyphicon glyphicon-th"></span>
                         </div>
@@ -170,7 +166,7 @@
       <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.1/js/bootstrap-datepicker.min.js"></script>
 
       <!-- Custom app specific javascript library -->
-      <script src="assets/js/app.js"></script>
+      <script src="assets/js/profile.js"></script>
 
 </body>
 
