--- a/portfolio/www/index.html
+++ b/portfolio/www/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Joe Somma - Software Engineer, Web Developer, Mobile Developer</title>
+    <title>Joe Somma - Website Design, SEO, Lakes Region New Hampshire</title>
 
     <!-- BOOTSTRAP CSS REF -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -74,9 +74,11 @@
       </div> <!-- .row -->
 
       <!-- SUB HEADING AND TAG LINE -->
-      <div class="row mt-sub-head-white text-center">
+      <div>
         <div class="col-md-6 col-md-offset-3">
-          <p class="lead">I am a trustworthy, resourceful, and reliable software engineer who builds custom web applications and technology solutions for start-up businesses, entrepreneurs, and multinational corporations</p>
+          <!-- <p class="lead">I am a trustworthy, resourceful, and reliable software engineer who builds custom web applications and technology solutions for start-up businesses, entrepreneurs, and multinational corporations</p>-->
+          <p class="lead row mt-sub-head-white text-center">If you need help building or enhancing your website to better connect with your customers using responsive mobile design and search engine optimization please contact me today at <a href="mailto:jsomma@millentek.com" target="_blank">jsomma@millentek.com</a> or call 203-767-3054.</p>
+
         </div>
 
       </div> <!-- .row -->
@@ -107,7 +109,7 @@
         <div class="col-md-4 col-md-offset-4">
           <h1>WHAT I DO</h1>
           <div class="mt-block-line"></div>
-          <p class="lead">These are the skills I can offer to help build and deploy your web application<p>
+          <p class="lead">These are the skills I can offer to help you build and manage your website<p>
        </div>
 
       </div> <!-- .row -->
@@ -116,38 +118,49 @@
 
       <div class="row mt-service-thumb-row">
 
-
-        <div class="col-md-4">
-          <a href="#services" alt="Web Programming">
+        <div class="col-md-3">
+          <a href="#services" alt="Web Development">
             <div class="thumbnail mt-service-thumb">
               <div class="caption mt-service-thumb-text">
                 <span class="fa fa-code fa-5x"></span>
-                <h3>Web Programming</h3>
-                <p>I can help you build your web applications using technologies that include HTML, CSS, Javascript, Bootstrap, JQuery, AngularJS, PHP, and MySQL</p>
+                <h3>Web Development</h3>
+                <p>I can help you build and manage your website using technologies like Wordpress, HTML, CSS, Javascript, Bootstrap, JQuery, AngularJS, PHP, and MySQL</p>
               </div>
             </div>
           </a>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-3">
+          <a href="#services" alt="SEO">
+            <div class="thumbnail mt-service-thumb">
+              <div class="caption mt-service-thumb-text">
+                <span class="fa fa-search fa-5x"></span>
+                <h3>SEO</h3>
+                <p>I can help you with your organic search engine rankings using SEO strategies for keywords, meta descriptions, sitemaps, content management, website analytics, monitoring, and reporting</p>
+              </div>
+            </div>
+          </a>
+        </div>
+
+        <div class="col-md-3">
           <a href="#services" alt="Cloud Hosting">
             <div class="thumbnail mt-service-thumb">
               <div class="caption mt-service-thumb-text">
                 <span class="fa fa-cloud fa-5x"></span>
                 <h3>Cloud Hosting</h3>
-                <p>I can help you provision cloud hosting solutions that include Amazon Web Services (AWS), Microsoft Azure, Google Cloud, Google Apps, and WireNine</p>
+                <p>I can help you with your cloud and website hosting using Managed Wordpress, Google Apps for Work, Amazon Web Services (AWS), Microsoft Azure, Google Cloud</p>
               </div>
             </div>
           </a>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-3">
           <a href="#services" alt="Development Process">
             <div class="thumbnail mt-service-thumb">
               <div class="caption mt-service-thumb-text">
                 <span class="fa fa-puzzle-piece fa-5x"></span>
                 <h3>Development Process</h3>
-                <p>I can help you organize your projects using standard Agile SDLC methodologies like SCRUM, KANBAN, and LEAN</p>
+                <p>I can help you organize your projects using Agile software development lifecycle processes like SCRUM, KANBAN, and LEAN</p>
               </div>
             </div>
           </a>
@@ -180,11 +193,44 @@
 
         <div class="col-md-3 ">
           <div class="thumbnail mt-portfolio-thumb ">
-            <a href="http://somma-project.meteor.com" target="_blank ">
-              <img src="assets/images/site-ranking-project.png" alt="Site Ranking App">
+            <a href="http://lakesregioncomputer.com" target="_blank">
+              <img src="assets/images/lrc-project.png" alt="Local Technology Retailer">
             </a>
             <div class="caption mt-portfolio-thumb-text ">
-              <h4>Site Ranking App</h4>
+              <h4>Local Technology Retailer</h4>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-3 ">
+          <div class="thumbnail mt-portfolio-thumb ">
+            <a href="http://innnewhampshire.com" target="_blank">
+              <img src="assets/images/inh-project.png" alt="Local Inn & Restaurant">
+            </a>
+            <div class="caption mt-portfolio-thumb-text ">
+              <h4>Local Inn & Restaurant</h4>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-3 ">
+          <div class="thumbnail mt-portfolio-thumb ">
+            <a href="#portfolio">
+              <img src="assets/images/google-forms-project.png" alt="Home Inspection Reporting">
+            </a>
+            <div class="caption mt-portfolio-thumb-text ">
+              <h4>Home Inspection Reporting</h4>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-3 ">
+          <div class="thumbnail mt-portfolio-thumb ">
+            <a href="#portfolio" target="_blank ">
+              <img src="assets/images/site-ranking-project.png" alt="Site Ranking">
+            </a>
+            <div class="caption mt-portfolio-thumb-text ">
+              <h4>Site Ranking</h4>
             </div>
           </div>
         </div>
