--- a/portfolio/www/index.html
+++ b/portfolio/www/index.html
@@ -66,7 +66,7 @@
       <div class="row mt-top-row-home-white">
 
         <div class="col-md-8 col-md-offset-2">
-          <p class="lead mt-padding-top">Hello, my name is Joe and I am a</p>
+          <p class="lead">Hello, my name is Joe and I am a</p>
           <h1>FULL STACK WEB DEVELOPER</h1>
           <div class="mt-block-line"></div>
         </div>
@@ -74,10 +74,10 @@
       </div> <!-- .row -->
 
       <!-- SUB HEADING AND TAG LINE -->
-      <div>
+      <div class="mt-sub-head-white text-center">
         <div class="col-md-6 col-md-offset-3">
           <!-- <p class="lead">I am a trustworthy, resourceful, and reliable software engineer who builds custom web applications and technology solutions for start-up businesses, entrepreneurs, and multinational corporations</p>-->
-          <p class="lead row mt-sub-head-white text-center">If you need help building or enhancing your website to better connect with your customers using responsive mobile design and search engine optimization please contact me today at <a href="mailto:jsomma@millentek.com" target="_blank">jsomma@millentek.com</a> or call 203-767-3054.</p>
+          <p class="lead row">If you need help building or enhancing your website to better connect with your customers using responsive mobile design and search engine optimization please contact me today using these links: <a href="mailto:jsomma@millentek.com" target="_blank">jsomma@millentek.com</a> or call <a href="tel:2037673054">203-767-3054</a></p>
 
         </div>
 
@@ -109,7 +109,7 @@
         <div class="col-md-4 col-md-offset-4">
           <h1>WHAT I DO</h1>
           <div class="mt-block-line"></div>
-          <p class="lead">These are the skills I can offer to help you build and manage your website<p>
+          <p class="lead">These are the services I can offer to help you build and manage your website<p>
        </div>
 
       </div> <!-- .row -->
