--- a/portfolio/www/index.html
+++ b/portfolio/www/index.html
@@ -63,22 +63,25 @@
     <div id="home" class="container mt-content-container mt-top-container-home">
 
       <!-- INTRODUCTION AND MAIN HEADING -->
-      <div class="row mt-top-row-home-white">
+      <div class="row mt-top-row-home">
 
         <div class="col-md-8 col-md-offset-2">
-          <p class="lead">Hello, my name is Joe and I am a</p>
-          <h1>FULL STACK WEB DEVELOPER</h1>
-          <div class="mt-block-line"></div>
+          <p class="lead mt-home-lead-text">Hello, my name is Joe and I am a</p>
+          <h1 class="mt-home-header-text">WEB DEVELOPER</h1>
         </div>
 
       </div> <!-- .row -->
 
       <!-- SUB HEADING AND TAG LINE -->
-      <div class="mt-sub-head-white text-center">
+      <div class="row mt-sub-head text-center">
+
         <div class="col-md-6 col-md-offset-3">
           <!-- <p class="lead">I am a trustworthy, resourceful, and reliable software engineer who builds custom web applications and technology solutions for start-up businesses, entrepreneurs, and multinational corporations</p>-->
-          <p class="lead row">If you need help building or enhancing your website to better connect with your customers using responsive mobile design and search engine optimization please contact me today using these links: <a href="mailto:jsomma@millentek.com" target="_blank">jsomma@millentek.com</a> or call <a href="tel:2037673054">203-767-3054</a></p>
-
+          <p class="lead row mt-home-lead-text">Need help connecting with your customers online? </p>
+          <p class="lead row mt-home-lead-text">Please contact me today using these links:</p>
+          <p class="lead row mt-home-lead-text">
+            <a href="mailto:jsomma@millentek.com" target="_blank">jsomma@millentek.com</a> or call <a href="tel:2037673054">203-767-3054</a>
+          </p>
         </div>
 
       </div> <!-- .row -->
@@ -106,10 +109,10 @@
 
       <div class="row mt-top-row text-muted">
 
-        <div class="col-md-4 col-md-offset-4">
-          <h1>WHAT I DO</h1>
+        <div class="col-md-6 col-md-offset-3">
+          <h1 class="mt-service-header-text">What I Do</h1>
           <div class="mt-block-line"></div>
-          <p class="lead">These are the services I can offer to help you build and manage your website<p>
+          <p class="lead mt-service-lead-text">Services I can offer your business<p>
        </div>
 
       </div> <!-- .row -->
@@ -119,11 +122,11 @@
       <div class="row mt-service-thumb-row">
 
         <div class="col-md-3">
-          <a href="#services" alt="Web Development">
+          <a href="#services" alt="Website">
             <div class="thumbnail mt-service-thumb">
               <div class="caption mt-service-thumb-text">
                 <span class="fa fa-code fa-5x"></span>
-                <h3>Web Development</h3>
+                <h3>Website</h3>
                 <p>I can help you build and manage your website using technologies like Wordpress, HTML, CSS, Javascript, Bootstrap, JQuery, AngularJS, PHP, and MySQL</p>
               </div>
             </div>
@@ -136,31 +139,31 @@
               <div class="caption mt-service-thumb-text">
                 <span class="fa fa-search fa-5x"></span>
                 <h3>SEO</h3>
-                <p>I can help you with your organic search engine rankings using SEO strategies for keywords, meta descriptions, sitemaps, content management, website analytics, monitoring, and reporting</p>
+                <p>I can help you with your search engine rankings using SEO strategies for keywords, meta descriptions, sitemaps, content management, website analytics, monitoring, and reporting</p>
               </div>
             </div>
           </a>
         </div>
 
         <div class="col-md-3">
-          <a href="#services" alt="Cloud Hosting">
+          <a href="#services" alt="Cloud">
             <div class="thumbnail mt-service-thumb">
               <div class="caption mt-service-thumb-text">
                 <span class="fa fa-cloud fa-5x"></span>
-                <h3>Cloud Hosting</h3>
-                <p>I can help you with your cloud and website hosting using Managed Wordpress, Google Apps for Work, Amazon Web Services (AWS), Microsoft Azure, Google Cloud</p>
+                <h3>Cloud</h3>
+                <p>I can help you with your cloud and website hosting strategies using Managed Wordpress, Google Apps for Work, Amazon Web Services (AWS), Microsoft Azure, Google Cloud</p>
               </div>
             </div>
           </a>
         </div>
 
         <div class="col-md-3">
-          <a href="#services" alt="Development Process">
+          <a href="#services" alt="Development">
             <div class="thumbnail mt-service-thumb">
               <div class="caption mt-service-thumb-text">
                 <span class="fa fa-puzzle-piece fa-5x"></span>
-                <h3>Development Process</h3>
-                <p>I can help you organize your projects using Agile software development lifecycle processes like SCRUM, KANBAN, and LEAN</p>
+                <h3>Development</h3>
+                <p>I can help you organize your projects using Agile software development processes like SCRUM, KANBAN, and LEAN</p>
               </div>
             </div>
           </a>
@@ -181,9 +184,9 @@
       <div class="row mt-top-row-white text-muted">
 
         <div class="col-md-6 col-md-offset-3">
-          <h1>MY PROJECTS</h1>
+          <h1 class="mt-portfolio-header-text">My Work</h1>
           <div class="mt-block-line"></div>
-          <p class="lead">Here are a few samples of my work</p>
+          <p class="lead mt-portfolio-lead-text">A few samples of my work</p>
         </div>
 
       </div> <!-- .row -->
@@ -192,40 +195,40 @@
       <div class="row mt-portfolio-thumb-row">
 
         <div class="col-md-3 ">
-          <div class="thumbnail mt-portfolio-thumb ">
+          <div class="thumbnail mt-portfolio-thumb">
             <a href="http://lakesregioncomputer.com" target="_blank">
-              <img src="assets/images/lrc-project.png" alt="Local Technology Retailer">
+              <img src="assets/images/lrc-project.png" alt="Technology Retailer">
             </a>
             <div class="caption mt-portfolio-thumb-text ">
-              <h4>Local Technology Retailer</h4>
+              <h4>Technology Retailer</h4>
             </div>
           </div>
         </div>
 
         <div class="col-md-3 ">
-          <div class="thumbnail mt-portfolio-thumb ">
+          <div class="thumbnail mt-portfolio-thumb">
             <a href="http://innnewhampshire.com" target="_blank">
-              <img src="assets/images/inh-project.png" alt="Local Inn & Restaurant">
+              <img src="assets/images/inh-project.png" alt="Inn & Restaurant">
             </a>
             <div class="caption mt-portfolio-thumb-text ">
-              <h4>Local Inn & Restaurant</h4>
+              <h4>Inn & Restaurant</h4>
             </div>
           </div>
         </div>
 
         <div class="col-md-3 ">
-          <div class="thumbnail mt-portfolio-thumb ">
+          <div class="thumbnail mt-portfolio-thumb">
             <a href="#portfolio">
-              <img src="assets/images/google-forms-project.png" alt="Home Inspection Reporting">
+              <img src="assets/images/google-forms-project.png" alt="Home Inspection">
             </a>
             <div class="caption mt-portfolio-thumb-text ">
-              <h4>Home Inspection Reporting</h4>
+              <h4>Home Inspection</h4>
             </div>
           </div>
         </div>
 
         <div class="col-md-3 ">
-          <div class="thumbnail mt-portfolio-thumb ">
+          <div class="thumbnail mt-portfolio-thumb">
             <a href="#portfolio" target="_blank ">
               <img src="assets/images/site-ranking-project.png" alt="Site Ranking">
             </a>
@@ -236,12 +239,12 @@
         </div>
 
         <div class="col-md-3 ">
-          <div class="thumbnail mt-portfolio-thumb ">
+          <div class="thumbnail mt-portfolio-thumb">
             <a href="http://joesomma.me/portfolio/quotemachineapp" target="_blank ">
-              <img src="assets/images/quotemachine-project.png" alt="Quote Machine App">
+              <img src="assets/images/quotemachine-project.png" alt="Quote Machine">
             </a>
             <div class="caption mt-portfolio-thumb-text ">
-              <h4>LOTR Quote Machine</h4>
+              <h4>Quote Machine</h4>
             </div>
           </div>
         </div>
@@ -249,7 +252,7 @@
         <div class="col-md-3">
           <div class="thumbnail mt-portfolio-thumb">
             <a href="http://joesomma.me/portfolio/weatherapp" target="_blank">
-              <img src="assets/images/weather-project.png" alt="Weather App">
+              <img src="assets/images/weather-project.png" alt="Weather Finder">
             </a>
             <div class="caption mt-portfolio-thumb-text">
               <h4>Weather Finder</h4>
@@ -260,7 +263,7 @@
         <div class="col-md-3">
           <div class="thumbnail mt-portfolio-thumb">
             <a href="http://joesomma.me/portfolio/journalapp" target="_blank">
-              <img src="assets/images/journal-project.png" alt="Journal App">
+              <img src="assets/images/journal-project.png" alt="My Journal">
             </a>
             <div class="caption mt-portfolio-thumb-text">
               <h4>My Journal</h4>
@@ -293,7 +296,7 @@
 
        <!-- HEADER -->
         <div class="col-md-6 col-md-offset-3">
-          <h1>CONNECT WITH ME</h1>
+          <h1 class="mt-connect-header-text">Connect With Me</h1>
           <div class="mt-block-line"></div>
         </div>
 
@@ -305,7 +308,7 @@
         <!-- SOCIAL LINKS COLUMN -->
         <div class="col-md-6 center">
 
-          <p class="lead">Connect with me at these social media sites</p>
+          <p class="lead mt-connect-lead-text">My social media links</p>
 
           <div class="row">
 
@@ -345,7 +348,7 @@
 
         <div class="col-md-6 center">
 
-          <p class="lead">Please let me know how I can help you with your project </p>
+          <p class="lead mt-connect-lead-text">How I can help you with your project?</p>
 
           <div class="row mt-connect-form-row">
 
@@ -382,7 +385,7 @@
         </div> <!-- end contact form column -->
 
          <!-- COPYRIGHT FOOTER -->
-         <p class="mt-copyright text-muted">Copyright &copy; Millentek, LLC 2015. All Rights Reserved</p>
+         <p class="mt-copyright">Copyright &copy; Millentek, LLC 2016. All Rights Reserved</p>
 
       </div> <!-- .row -->
 
