Design changes to font colors and home page

--- a/portfolio/www/index.html
+++ b/portfolio/www/index.html
@@ -68,23 +68,31 @@
         <div class="col-md-8 col-md-offset-2">
           <p class="lead mt-home-lead-text">Hello, my name is Joe and I am a</p>
           <h1 class="mt-home-header-text">WEB DEVELOPER</h1>
+          <p class="lead row mt-home-lead-text">Need help connecting with your customers online? </p>
+          <p class="lead row mt-home-lead-text">Contact me today:</p>
+          <p class="lead row mt-home-lead-text">
+            <a href="mailto:jsomma@millentek.com" target="_blank">jsomma@millentek.com</a>
+          </p>
+          <p class="lead row mt-home-lead-text">
+            <a href="tel:2037673054">203-767-3054</a>
+          </p>
+
         </div>
 
       </div> <!-- .row -->
 
       <!-- SUB HEADING AND TAG LINE -->
-      <div class="row mt-sub-head text-center">
+      <!--<div class="row mt-sub-head text-center">
 
         <div class="col-md-6 col-md-offset-3">
-          <!-- <p class="lead">I am a trustworthy, resourceful, and reliable software engineer who builds custom web applications and technology solutions for start-up businesses, entrepreneurs, and multinational corporations</p>-->
           <p class="lead row mt-home-lead-text">Need help connecting with your customers online? </p>
           <p class="lead row mt-home-lead-text">Please contact me today using these links:</p>
           <p class="lead row mt-home-lead-text">
             <a href="mailto:jsomma@millentek.com" target="_blank">jsomma@millentek.com</a> or call <a href="tel:2037673054">203-767-3054</a>
           </p>
-        </div>
+        </div>-->
 
-      </div> <!-- .row -->
+      <!--</div>  .row -->
 
       <!-- NAV DOWN - NEXT SECTION -->
       <div class="row mt-nav-next-white">
