Complete revamp of the messaging and changed the brand to millentek from my personal name

--- a/portfolio/www/index.html
+++ b/portfolio/www/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Joe Somma - Website Design, SEO, Lakes Region New Hampshire</title>
+    <title>millentek - Website Design, SEO, Lakes Region New Hampshire</title>
 
     <!-- BOOTSTRAP CSS REF -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -39,7 +39,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#home">joe somma</a>
+          <a class="navbar-brand" href="#home">millentek</a>
         </div>
 
         <!-- NAVBAR LINKS - COLLAPSABLE -->
@@ -65,11 +65,12 @@
       <!-- INTRODUCTION AND MAIN HEADING -->
       <div class="row mt-top-row-home">
 
-        <div class="col-md-8 col-md-offset-2">
-          <p class="lead mt-home-lead-text">Hello, my name is Joe and I am a</p>
-          <h1 class="mt-home-header-text">WEB DEVELOPER</h1>
-          <p class="lead row mt-home-lead-text">Need help connecting with your customers online? </p>
-          <p class="lead row mt-home-lead-text">Contact me today:</p>
+        <div class="col-md-6 col-md-offset-3">
+          <h3 class="mt-home-header-text">Accordng to smallbiztrends.com, after "Word of Mouth", the #2 most common way customers find out about your business is online search engines.</h3>
+          <h3>Do you have a website where customers can find you quickly and connect with your small business?</h3>
+          <div class="mt-block-line"></div>
+          <h2>We are here to help you maximize your online customer experience!</h2>
+          <p class="lead row mt-home-lead-text">Contact us today for a free consultation:</p>
           <p class="lead row mt-home-lead-text">
             <a href="mailto:jsomma@millentek.com" target="_blank">jsomma@millentek.com</a>
           </p>
@@ -118,9 +119,9 @@
       <div class="row mt-top-row text-muted">
 
         <div class="col-md-6 col-md-offset-3">
-          <h1 class="mt-service-header-text">What I Do</h1>
+          <h1 class="mt-service-header-text">What We Do</h1>
           <div class="mt-block-line"></div>
-          <p class="lead mt-service-lead-text">Services I can offer your business<p>
+          <p class="lead mt-service-lead-text">Services we can offer your business<p>
        </div>
 
       </div> <!-- .row -->
@@ -135,7 +136,8 @@
               <div class="caption mt-service-thumb-text">
                 <span class="fa fa-code fa-5x"></span>
                 <h3>Website</h3>
-                <p>I can help you build and manage your website using technologies like Wordpress, HTML, CSS, Javascript, Bootstrap, JQuery, AngularJS, PHP, and MySQL</p>
+                <div class="mt-block-line-thumb"></div>
+                <p><strong>Build</strong> your website using the latest technologies and responsive design techniques to maximize your customer experience on all their devices</p>
               </div>
             </div>
           </a>
@@ -147,7 +149,8 @@
               <div class="caption mt-service-thumb-text">
                 <span class="fa fa-search fa-5x"></span>
                 <h3>SEO</h3>
-                <p>I can help you with your search engine rankings using SEO strategies for keywords, meta descriptions, sitemaps, content management, website analytics, monitoring, and reporting</p>
+                <div class="mt-block-line-thumb"></div>
+                <p><strong>Optimize</strong> your search rankings using keywords, meta descriptions, sitemaps, content management, analytics, monitoring, and reporting strategies</p>
               </div>
             </div>
           </a>
@@ -159,7 +162,8 @@
               <div class="caption mt-service-thumb-text">
                 <span class="fa fa-cloud fa-5x"></span>
                 <h3>Cloud</h3>
-                <p>I can help you with your cloud and website hosting strategies using Managed Wordpress, Google Apps for Work, Amazon Web Services (AWS), Microsoft Azure, Google Cloud</p>
+                <div class="mt-block-line-thumb"></div>
+                <p><strong>Execute</strong> a hosting strategy to keep your business up and running so your customers can always find you</p>
               </div>
             </div>
           </a>
@@ -170,8 +174,9 @@
             <div class="thumbnail mt-service-thumb">
               <div class="caption mt-service-thumb-text">
                 <span class="fa fa-puzzle-piece fa-5x"></span>
-                <h3>Development</h3>
-                <p>I can help you organize your projects using Agile software development processes like SCRUM, KANBAN, and LEAN</p>
+                <h3>Process</h3>
+                <div class="mt-block-line-thumb"></div>
+                <p><strong>Organize</strong> your projects using Agile software development practices that focus on your business value and maximizing your ROI</p>
               </div>
             </div>
           </a>
@@ -192,9 +197,9 @@
       <div class="row mt-top-row-white text-muted">
 
         <div class="col-md-6 col-md-offset-3">
-          <h1 class="mt-portfolio-header-text">My Work</h1>
+          <h1 class="mt-portfolio-header-text">Our Work</h1>
           <div class="mt-block-line"></div>
-          <p class="lead mt-portfolio-lead-text">A few samples of my work</p>
+          <p class="lead mt-portfolio-lead-text">A few samples of our work</p>
         </div>
 
       </div> <!-- .row -->
@@ -304,7 +309,7 @@
 
        <!-- HEADER -->
         <div class="col-md-6 col-md-offset-3">
-          <h1 class="mt-connect-header-text">Connect With Me</h1>
+          <h1 class="mt-connect-header-text">Connect With Us</h1>
           <div class="mt-block-line"></div>
         </div>
 
@@ -316,7 +321,7 @@
         <!-- SOCIAL LINKS COLUMN -->
         <div class="col-md-6 center">
 
-          <p class="lead mt-connect-lead-text">My social media links</p>
+          <p class="lead mt-connect-lead-text">Our social media links</p>
 
           <div class="row">
 
@@ -356,7 +361,7 @@
 
         <div class="col-md-6 center">
 
-          <p class="lead mt-connect-lead-text">How I can help you with your project?</p>
+          <p class="lead mt-connect-lead-text">How can we help you with your project?</p>
 
           <div class="row mt-connect-form-row">
 
