Revamped design to include new logo and colors.  Added testimonial and cleaned up

--- a/portfolio/www/index.html
+++ b/portfolio/www/index.html
@@ -65,18 +65,25 @@
       <!-- INTRODUCTION AND MAIN HEADING -->
       <div class="row mt-top-row-home">
 
-        <div class="col-md-6 col-md-offset-3">
-          <h3 class="mt-home-header-text">Accordng to smallbiztrends.com, after "Word of Mouth", the #2 most common way customers find out about your business is online search engines.</h3>
-          <h3>Do you have a website where customers can find you quickly and connect with your small business?</h3>
+        <div class="col-md-8 col-md-offset-2">
+         <h1>Concerned about connecting with your customers online?</h1>
+         <h1>We are here to help!</h1>
           <div class="mt-block-line"></div>
-          <h2>We are here to help you maximize your online customer experience!</h2>
-          <p class="lead row mt-home-lead-text">Contact us today for a free consultation:</p>
+          <!--<h3>According to smallbiztrends.com, after "Word of Mouth", the #2 most common way customers find out about your business is online search engines.</h3>
+          <div class="mt-block-line"></div>-->
+          <h2>Contact us today for a free consultation!</h2>
           <p class="lead row mt-home-lead-text">
             <a href="mailto:jsomma@millentek.com" target="_blank">jsomma@millentek.com</a>
           </p>
           <p class="lead row mt-home-lead-text">
             <a href="tel:2037673054">203-767-3054</a>
           </p>
+
+          <div class="mt-scroll-down-link">
+            <a href="#services" alt="Scroll Next">
+              <span class="fa fa-angle-double-down"></span>
+            </a>
+          </div>
 
         </div>
 
@@ -96,7 +103,7 @@
       <!--</div>  .row -->
 
       <!-- NAV DOWN - NEXT SECTION -->
-      <div class="row mt-nav-next-white">
+      <!--<div class="row mt-nav-next-white">
 
         <div class="col-md-12">
           <div class="mt-scroll-down-link">
@@ -106,7 +113,7 @@
           </div>
         </div>
 
-      </div> <!-- .row -->
+      </div>-->
 
     </div> <!-- .container -->
 
@@ -118,68 +125,69 @@
 
       <div class="row mt-top-row text-muted">
 
-        <div class="col-md-6 col-md-offset-3">
-          <h1 class="mt-service-header-text">What We Do</h1>
+        <div class="col-md-8 col-md-offset-2">
+          <h1 class="mt-service-header-text">Our Services</h1>
           <div class="mt-block-line"></div>
-          <p class="lead mt-service-lead-text">Services we can offer your business<p>
+          <p class="lead mt-service-lead-text"><span class="fa fa-quote-left"> For several years I have been trying to reformat and automate my home inspection reporting template. Joe designed and built a forms application that works in the cloud. Now I can create my reports from my phone or tablet at the job site. His instructions were superb and the end result solved the problem which I’ve been working on for what seems like an endless amount of time. He gets my highest praises! <span class="fa fa-quote-right"></span><p>
+          <h4 class="mt-service-lead-text">Tom Fleischmann</h4>
+          <h5 class="mt-service-lead-text">Owner, Home Inspection Business</h5>
+
        </div>
 
       </div> <!-- .row -->
+
+      <!--<div class="mt-block-line"></div>-->
 
       <!-- SERVICE THUMBNAILS -->
 
       <div class="row mt-service-thumb-row">
 
         <div class="col-md-3">
-          <a href="#services" alt="Website">
+          <!--<a href="#services" alt="Website">-->
             <div class="thumbnail mt-service-thumb">
               <div class="caption mt-service-thumb-text">
                 <span class="fa fa-code fa-5x"></span>
                 <h3>Website</h3>
-                <div class="mt-block-line-thumb"></div>
                 <p><strong>Build</strong> your website using the latest technologies and responsive design techniques to maximize your customer experience on all their devices</p>
               </div>
             </div>
-          </a>
+          <!--</a>-->
         </div>
 
         <div class="col-md-3">
-          <a href="#services" alt="SEO">
+          <!--<a href="#services" alt="SEO">-->
             <div class="thumbnail mt-service-thumb">
               <div class="caption mt-service-thumb-text">
                 <span class="fa fa-search fa-5x"></span>
                 <h3>SEO</h3>
-                <div class="mt-block-line-thumb"></div>
-                <p><strong>Optimize</strong> your search rankings using keywords, meta descriptions, sitemaps, content management, analytics, monitoring, and reporting strategies</p>
+                <p><strong>Optimize</strong> your search rankings using keywords, descriptions, sitemaps, content management, analytics, monitoring, and reporting strategies</p>
               </div>
             </div>
-          </a>
+          <!--</a>-->
         </div>
 
         <div class="col-md-3">
-          <a href="#services" alt="Cloud">
+          <!--<a href="#services" alt="Cloud">-->
             <div class="thumbnail mt-service-thumb">
               <div class="caption mt-service-thumb-text">
                 <span class="fa fa-cloud fa-5x"></span>
                 <h3>Cloud</h3>
-                <div class="mt-block-line-thumb"></div>
                 <p><strong>Execute</strong> a hosting strategy to keep your business up and running so your customers can always find you</p>
               </div>
             </div>
-          </a>
+          <!--</a>-->
         </div>
 
         <div class="col-md-3">
-          <a href="#services" alt="Development">
+          <!--<a href="#services" alt="Development">-->
             <div class="thumbnail mt-service-thumb">
               <div class="caption mt-service-thumb-text">
                 <span class="fa fa-puzzle-piece fa-5x"></span>
                 <h3>Process</h3>
-                <div class="mt-block-line-thumb"></div>
                 <p><strong>Organize</strong> your projects using Agile software development practices that focus on your business value and maximizing your ROI</p>
               </div>
             </div>
-          </a>
+          <!--</a>-->
         </div>
       </div> <!-- .row -->
 
