Messaging and some color changes

--- a/portfolio/www/index.html
+++ b/portfolio/www/index.html
@@ -7,6 +7,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--<meta name="linkstant" content="5659795562430464" />-->
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>millentek - Website Design, SEO, Lakes Region New Hampshire</title>
 
@@ -66,12 +67,13 @@
       <div class="row mt-top-row-home">
 
         <div class="col-md-8 col-md-offset-2">
-         <h1>Concerned about connecting with your customers online?</h1>
+         <h1>Your business needs to grow.</h1>
          <h1>We are here to help!</h1>
+         <!--<h2>This is going to be exciting...</h2>-->
           <div class="mt-block-line"></div>
           <!--<h3>According to smallbiztrends.com, after "Word of Mouth", the #2 most common way customers find out about your business is online search engines.</h3>
           <div class="mt-block-line"></div>-->
-          <h2>Contact us today for a free consultation!</h2>
+          <h2>Contact us today for a free consultation and let's get to work!</h2>
           <p class="lead row mt-home-lead-text">
             <a href="mailto:jsomma@millentek.com" target="_blank">jsomma@millentek.com</a>
           </p>
@@ -422,6 +424,9 @@
       </div>
 
     <!-- SCRIPTS SECTION AND LIBRARY REF -->
+
+    <!-- Linkstant Monitoring -->
+    <!--<script src="http://www.linkstant.com/linkstant.js" type="text/javascript"></script>-->
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
