--- a/portfolio/www/index.html
+++ b/portfolio/www/index.html
@@ -66,14 +66,16 @@
       <!-- INTRODUCTION AND MAIN HEADING -->
       <div class="row mt-top-row-home">
 
-        <div class="col-md-8 col-md-offset-2">
-         <h1>Your business needs to grow.</h1>
+        <div class="col-md-6 col-md-offset-3">
+
+         <h1>Looking for Web Design, SEO, Content Management?</h1>
          <h1>We are here to help!</h1>
          <!--<h2>This is going to be exciting...</h2>-->
           <div class="mt-block-line"></div>
           <!--<h3>According to smallbiztrends.com, after "Word of Mouth", the #2 most common way customers find out about your business is online search engines.</h3>
           <div class="mt-block-line"></div>-->
           <h2>Contact us today for a free consultation and let's get to work!</h2>
+
           <p class="lead row mt-home-lead-text">
             <a href="mailto:jsomma@millentek.com" target="_blank">jsomma@millentek.com</a>
           </p>
@@ -172,6 +174,18 @@
           <!--<a href="#services" alt="Cloud">-->
             <div class="thumbnail mt-service-thumb">
               <div class="caption mt-service-thumb-text">
+                <span class="fa fa-font fa-5x"></span>
+                <h3>Content</h3>
+                <p><strong>Manage</strong> your site content dynamically using leading edge tools optimzed and designed for adminstrative and marketing team members</p>
+              </div>
+            </div>
+          <!--</a>-->
+        </div>
+
+        <div class="col-md-3">
+          <!--<a href="#services" alt="Cloud">-->
+            <div class="thumbnail mt-service-thumb">
+              <div class="caption mt-service-thumb-text">
                 <span class="fa fa-cloud fa-5x"></span>
                 <h3>Cloud</h3>
                 <p><strong>Execute</strong> a hosting strategy to keep your business up and running so your customers can always find you</p>
@@ -180,8 +194,8 @@
           <!--</a>-->
         </div>
 
-        <div class="col-md-3">
-          <!--<a href="#services" alt="Development">-->
+        <!--<div class="col-md-3">
+          <a href="#services" alt="Development">
             <div class="thumbnail mt-service-thumb">
               <div class="caption mt-service-thumb-text">
                 <span class="fa fa-puzzle-piece fa-5x"></span>
@@ -189,8 +203,9 @@
                 <p><strong>Organize</strong> your projects using Agile software development practices that focus on your business value and maximizing your ROI</p>
               </div>
             </div>
-          <!--</a>-->
-        </div>
+          </a>
+        </div>-->
+
       </div> <!-- .row -->
 
       <!-- END SERVICE THUMBNAILS -->
